[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'TripleSpec Focus'
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = triplespec_focus
description = Finds best focus for TripleSpec spectrograh based on a series of images obtained with different focus values
long_description = Standalone app to get the best focus.
author = Simon Torres
author_email = simon.torres@noirlab.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/triplespec_focus
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    scipy
    ccdproc
    sphinx

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.0.1
