[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_sphinx]
project = 'TripleSpec Focus'
source_dir = docs
build_dir = docs/_build

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[metadata]
name = triplespec_focus
author = Simon Torres
author_email = simon.torres@noirlab.edu
license = BSD-3-Clause
description = Finds best focus for TripleSpec spectrograph based on a series of images obtained with different focus values
long_description = file: README.md
long_description_content_type = text/markdown
url = http://triplespec-focus.readthedocs.io/
edit_on_github = False
github_project = soar-telescope/triplespec_focus

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    photutils
    scipy
    ccdproc

[options.extras_require]
test =
    pytest-cov
    coverage
    requests

docs =
    matplotlib
    sphinx
    sphinx-rtd-theme

[options.entry_points]
triplespec_focus = triplespec_focus.run_triplespec_focus

# E126 continuation line over-indented for hanging indent
# E127 continuation line over-indented for visual indent
# E128 continuation line under-indented for visual indent
# E201 whitespace after '{'
# E202 whitespace before ']'
# E203 whitespace before ','
# E221 multiple spaces before operator
# E225 missing whitespace around operator
# E226 missing whitespace around arithmetic operator
# E227 missing whitespace around bitwise or shift operator
# E231 missing whitespace after ','
# E251 unexpected spaces around keyword / parameter equals
# E501 line too long
# E731 do not assign a lambda expression, use a def
# E741 ambiguous variable name 'l'
# W503 line break before binary operator
# W504 line break after binary operator
# W505 doc line too long
[flake8]
max-line-length = 120
max-doc-length = 120
ignore = E126,E127,E128,E201,E202,E203,E221,E225,E226,E227,E231,E251,E501,E731,E741,W503,W504,W505